crates/sui/src/client_ptb/snapshots/sui__client_ptb__lexer__tests__dotted_idents.snap
---
source: crates/sui/src/client_ptb/lexer.rs
expression: tokens
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Lexeme(
            Ident,
            "a",
        ),
    },
    Spanned {
        span: Span {
            start: 2,
            end: 3,
        },
        value: Lexeme(
            Ident,
            "a",
        ),
    },
    Spanned {
        span: Span {
            start: 3,
            end: 4,
        },
        value: Lexeme(
            Dot,
            ".",
        ),
    },
    Spanned {
        span: Span {
            start: 4,
            end: 5,
        },
        value: Lexeme(
            Ident,
            "b",
        ),
    },
    Spanned {
        span: Span {
            start: 6,
            end: 7,
        },
        value: Lexeme(
            Ident,
            "a",
        ),
    },
    Spanned {
        span: Span {
            start: 7,
            end: 8,
        },
        value: Lexeme(
            Dot,
            ".",
        ),
    },
    Spanned {
        span: Span {
            start: 8,
            end: 9,
        },
        value: Lexeme(
            Ident,
            "b",
        ),
    },
    Spanned {
        span: Span {
            start: 9,
            end: 10,
        },
        value: Lexeme(
            Dot,
            ".",
        ),
    },
    Spanned {
        span: Span {
            start: 10,
            end: 11,
        },
        value: Lexeme(
            Ident,
            "c",
        ),
    },
    Spanned {
        span: Span {
            start: 12,
            end: 13,
        },
        value: Lexeme(
            Ident,
            "a",
        ),
    },
    Spanned {
        span: Span {
            start: 13,
            end: 14,
        },
        value: Lexeme(
            Dot,
            ".",
        ),
    },
    Spanned {
        span: Span {
            start: 14,
            end: 15,
        },
        value: Lexeme(
            Ident,
            "b",
        ),
    },
    Spanned {
        span: Span {
            start: 15,
            end: 16,
        },
        value: Lexeme(
            Dot,
            ".",
        ),
    },
    Spanned {
        span: Span {
            start: 16,
            end: 17,
        },
        value: Lexeme(
            Ident,
            "c",
        ),
    },
    Spanned {
        span: Span {
            start: 17,
            end: 18,
        },
        value: Lexeme(
            Dot,
            ".",
        ),
    },
    Spanned {
        span: Span {
            start: 18,
            end: 19,
        },
        value: Lexeme(
            Ident,
            "d",
        ),
    },
    Spanned {
        span: Span {
            start: 20,
            end: 21,
        },
        value: Lexeme(
            Ident,
            "a",
        ),
    },
    Spanned {
        span: Span {
            start: 21,
            end: 22,
        },
        value: Lexeme(
            Dot,
            ".",
        ),
    },
    Spanned {
        span: Span {
            start: 22,
            end: 23,
        },
        value: Lexeme(
            Ident,
            "b",
        ),
    },
    Spanned {
        span: Span {
            start: 23,
            end: 24,
        },
        value: Lexeme(
            Dot,
            ".",
        ),
    },
    Spanned {
        span: Span {
            start: 24,
            end: 25,
        },
        value: Lexeme(
            Ident,
            "c",
        ),
    },
    Spanned {
        span: Span {
            start: 25,
            end: 26,
        },
        value: Lexeme(
            Dot,
            ".",
        ),
    },
    Spanned {
        span: Span {
            start: 26,
            end: 27,
        },
        value: Lexeme(
            Ident,
            "d",
        ),
    },
    Spanned {
        span: Span {
            start: 27,
            end: 28,
        },
        value: Lexeme(
            Dot,
            ".",
        ),
    },
    Spanned {
        span: Span {
            start: 28,
            end: 29,
        },
        value: Lexeme(
            Ident,
            "e",
        ),
    },
]
