crates/sui/src/client_ptb/snapshots/sui__client_ptb__lexer__tests__tokenize_num.snap
---
source: crates/sui/src/client_ptb/lexer.rs
expression: tokens
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Lexeme {
            token: Number,
            src: "1",
        },
    },
    Spanned {
        span: Span {
            start: 2,
            end: 7,
        },
        value: Lexeme {
            token: Number,
            src: "1_000",
        },
    },
    Spanned {
        span: Span {
            start: 8,
            end: 19,
        },
        value: Lexeme {
            token: Number,
            src: "100_000_000",
        },
    },
    Spanned {
        span: Span {
            start: 20,
            end: 27,
        },
        value: Lexeme {
            token: Number,
            src: "100_000",
        },
    },
    Spanned {
        span: Span {
            start: 27,
            end: 30,
        },
        value: Lexeme {
            token: Ident,
            src: "u64",
        },
    },
    Spanned {
        span: Span {
            start: 31,
            end: 32,
        },
        value: Lexeme {
            token: Number,
            src: "1",
        },
    },
    Spanned {
        span: Span {
            start: 32,
            end: 34,
        },
        value: Lexeme {
            token: Ident,
            src: "u8",
        },
    },
    Spanned {
        span: Span {
            start: 35,
            end: 37,
        },
        value: Lexeme {
            token: Number,
            src: "1_",
        },
    },
    Spanned {
        span: Span {
            start: 37,
            end: 41,
        },
        value: Lexeme {
            token: Ident,
            src: "u128",
        },
    },
    Spanned {
        span: Span {
            start: 42,
            end: 45,
        },
        value: Lexeme {
            token: HexNumber,
            src: "1",
        },
    },
    Spanned {
        span: Span {
            start: 46,
            end: 53,
        },
        value: Lexeme {
            token: HexNumber,
            src: "1_000",
        },
    },
    Spanned {
        span: Span {
            start: 54,
            end: 67,
        },
        value: Lexeme {
            token: HexNumber,
            src: "100_000_000",
        },
    },
    Spanned {
        span: Span {
            start: 68,
            end: 77,
        },
        value: Lexeme {
            token: HexNumber,
            src: "100_000",
        },
    },
    Spanned {
        span: Span {
            start: 77,
            end: 80,
        },
        value: Lexeme {
            token: Ident,
            src: "u64",
        },
    },
    Spanned {
        span: Span {
            start: 81,
            end: 84,
        },
        value: Lexeme {
            token: HexNumber,
            src: "1",
        },
    },
    Spanned {
        span: Span {
            start: 84,
            end: 86,
        },
        value: Lexeme {
            token: Ident,
            src: "u8",
        },
    },
    Spanned {
        span: Span {
            start: 87,
            end: 91,
        },
        value: Lexeme {
            token: HexNumber,
            src: "1_",
        },
    },
    Spanned {
        span: Span {
            start: 91,
            end: 95,
        },
        value: Lexeme {
            token: Ident,
            src: "u128",
        },
    },
]
