crates/sui/src/client_ptb/snapshots/sui__client_ptb__lexer__tests__tokenize_vector.snap
---
source: crates/sui/src/client_ptb/lexer.rs
expression: tokens
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 6,
        },
        value: Lexeme {
            token: Ident,
            src: "vector",
        },
    },
    Spanned {
        span: Span {
            start: 6,
            end: 7,
        },
        value: Lexeme {
            token: LBracket,
            src: "[",
        },
    },
    Spanned {
        span: Span {
            start: 7,
            end: 8,
        },
        value: Lexeme {
            token: Number,
            src: "1",
        },
    },
    Spanned {
        span: Span {
            start: 8,
            end: 9,
        },
        value: Lexeme {
            token: Comma,
            src: ",",
        },
    },
    Spanned {
        span: Span {
            start: 9,
            end: 10,
        },
        value: Lexeme {
            token: Number,
            src: "2",
        },
    },
    Spanned {
        span: Span {
            start: 10,
            end: 11,
        },
        value: Lexeme {
            token: Comma,
            src: ",",
        },
    },
    Spanned {
        span: Span {
            start: 11,
            end: 12,
        },
        value: Lexeme {
            token: Number,
            src: "3",
        },
    },
    Spanned {
        span: Span {
            start: 12,
            end: 13,
        },
        value: Lexeme {
            token: RBracket,
            src: "]",
        },
    },
    Spanned {
        span: Span {
            start: 14,
            end: 20,
        },
        value: Lexeme {
            token: Ident,
            src: "vector",
        },
    },
    Spanned {
        span: Span {
            start: 20,
            end: 21,
        },
        value: Lexeme {
            token: LBracket,
            src: "[",
        },
    },
    Spanned {
        span: Span {
            start: 21,
            end: 22,
        },
        value: Lexeme {
            token: Number,
            src: "1",
        },
    },
    Spanned {
        span: Span {
            start: 22,
            end: 23,
        },
        value: Lexeme {
            token: Comma,
            src: ",",
        },
    },
    Spanned {
        span: Span {
            start: 24,
            end: 25,
        },
        value: Lexeme {
            token: Number,
            src: "2",
        },
    },
    Spanned {
        span: Span {
            start: 25,
            end: 26,
        },
        value: Lexeme {
            token: Comma,
            src: ",",
        },
    },
    Spanned {
        span: Span {
            start: 27,
            end: 28,
        },
        value: Lexeme {
            token: Number,
            src: "3",
        },
    },
    Spanned {
        span: Span {
            start: 28,
            end: 29,
        },
        value: Lexeme {
            token: RBracket,
            src: "]",
        },
    },
    Spanned {
        span: Span {
            start: 30,
            end: 36,
        },
        value: Lexeme {
            token: Ident,
            src: "vector",
        },
    },
    Spanned {
        span: Span {
            start: 36,
            end: 37,
        },
        value: Lexeme {
            token: LBracket,
            src: "[",
        },
    },
    Spanned {
        span: Span {
            start: 37,
            end: 38,
        },
        value: Lexeme {
            token: RBracket,
            src: "]",
        },
    },
    Spanned {
        span: Span {
            start: 39,
            end: 45,
        },
        value: Lexeme {
            token: Ident,
            src: "vector",
        },
    },
    Spanned {
        span: Span {
            start: 45,
            end: 46,
        },
        value: Lexeme {
            token: LBracket,
            src: "[",
        },
    },
    Spanned {
        span: Span {
            start: 46,
            end: 47,
        },
        value: Lexeme {
            token: Number,
            src: "1",
        },
    },
    Spanned {
        span: Span {
            start: 47,
            end: 48,
        },
        value: Lexeme {
            token: RBracket,
            src: "]",
        },
    },
    Spanned {
        span: Span {
            start: 49,
            end: 55,
        },
        value: Lexeme {
            token: Ident,
            src: "vector",
        },
    },
    Spanned {
        span: Span {
            start: 55,
            end: 56,
        },
        value: Lexeme {
            token: LBracket,
            src: "[",
        },
    },
    Spanned {
        span: Span {
            start: 56,
            end: 57,
        },
        value: Lexeme {
            token: Number,
            src: "1",
        },
    },
    Spanned {
        span: Span {
            start: 57,
            end: 58,
        },
        value: Lexeme {
            token: Comma,
            src: ",",
        },
    },
    Spanned {
        span: Span {
            start: 58,
            end: 59,
        },
        value: Lexeme {
            token: RBracket,
            src: "]",
        },
    },
]
