crates/sui/src/client_ptb/snapshots/sui__client_ptb__lexer__tests__unexpected_dash.snap
---
source: crates/sui/src/client_ptb/lexer.rs
expression: tokens
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Lexeme {
            token: Unexpected,
            src: "-",
        },
    },
]
